--- a/en/schedule.html
+++ b/en/schedule.html
@@ -154,7 +154,7 @@
                 Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.-->
                 </h6>
 
-        <div class="figcontainer" style="align-items: center;">
+        <!--<div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0%">
             <img class="responsive-img" src="../archivos/2024/cronograma/Manana.png" alt="Manana">
             </div>
@@ -163,11 +163,54 @@
             <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0%">
             <img class="responsive-img" src="../archivos/2024/cronograma/Tarde.png" alt="Tarde">
             </div>
+        </div>-->
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-0.png" alt="Manana"></a>
+            </div>
+        </div>
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-1.png" alt="Manana"></a>
+            </div>
+        </div>
+
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-2.png" alt="Manana"></a>
+            </div>
+        </div>
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-3.png" alt="Manana"></a>
+            </div>
+        </div>
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-4.png" alt="Manana"></a>
+            </div>
+        </div>
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-5.png" alt="Manana"></a>
+            </div>
+        </div>
+
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
+            <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-6.png" alt="Manana"></a>
+            </div>
         </div>
 
 
                 <br>
-
+<!--
             <table align="center">
               <tr>
                   <th style="text-align: center;" class="vertical">Activity</th>
@@ -410,7 +453,7 @@
                   <td style="text-align: center;">Conclusiones: “Acciones a futuro”</td>
                   <td style="text-align: center;">Asamblea General</td>
               </tr>
-          </table>
+          </table>-->
 
                 <br>
 
