--- a/es/cronograma.html
+++ b/es/cronograma.html
@@ -165,6 +165,13 @@
             </div>
         </div>-->
 
+        <br>
+
+        <h5 class="header col s12 light">
+        Los materiales se encontrarán disponibles en el <a href="https://drive.google.com/drive/folders/1mp5p2v8z51FDxrg4n8VxtoKf98WZSJpZ?usp=drive_link" target="_blank">DRIVE</a>.
+        <h5>
+
+
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 1; margin-top: 0%;margin-left: 0%;margin-right: 0% align-items: center;">
             <a href="../img/2024/cronograma/cronograma.pdf" target="_blank"><img class="responsive-img" src="../img/2024/cronograma/cronograma-0.png" alt="Manana"></a>
