--- a/en/organize.html
+++ b/en/organize.html
@@ -147,29 +147,22 @@
             <div class="row">
 
                 <div class="column">
-                    <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-                    <h5><p>Camila Neder</p></h5>
-                    <h6><p>Coordinator 1 Plurinational Bayes 2024</p></h6>
-                </div>
-
-               <div class="column">
-		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-		                <h5><p>Andrea Goijman</p></h5>
-		                <h6><p>Coordinator 2 Plurinational Bayes 2024</p></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="column">
                     <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
                     <h5><p>Gustavo Landfried</p></h5>
-                    <h6><p>General Director Plurinational Bayes 2024</p></h6>
+                    <h6><p>General Director Plurinational Bayes</p></h6>
                 </div>
 
                 <div class="column">
-                    <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
+                    <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
+                    <h5><p>Camila Neder</p></h5>
+                    <h6><p>Coordinator Plurinational Bayes 2024</p></h6>
+                </div>
+
+                <!--<div class="column">
+                    <p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>
                     <h5><p>Universidad Nacional de Salta</p></h5>
                     <h6><p>Host 2024</p></h6>
-                </div>
+                </div>-->
             </div>
 
         </div>
