--- a/es/organiza.html
+++ b/es/organiza.html
@@ -151,27 +151,14 @@
 
 
             <div class="row">
-               <div class="column">
-		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-		                <h5><p>Camila Neder</p></h5>
-		                <h6><p>Coordinadora 1 Bayes Plurinacional 2024</p></h6>
-                </div>
 
-               <div class="column">
-		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-		                <h5><p>Andrea Goijman</p></h5>
-		                <h6><p>Coordinadora 2 Bayes Plurinacional 2024</p></h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="column">
+              <div class="column">
                     <h5><p>Gustavo Landfried</p></h5>
-		                <h6><p>Director General Bayes Plurinacional 2024</p></h6>
+		                <h6><p>Director General Bayes Plurinacional</p></h6>
                 </div>
-                    <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
-                <div class="column">
-                    <h5><p>Universidad Nacional de Salta</p></h5>
-                    <h6><p>Anfitrión 2024</p></h6>
+               <div class="column">
+		                <h5><p>Camila Neder</p></h5>
+		                <h6><p>Coordinadora Bayes Plurinacional 2024</p></h6>
                 </div>
             </div>
         </div>
