Actualización del índince

--- a/en/index.html
+++ b/en/index.html
@@ -52,7 +52,8 @@
         <li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/speakers.html">Speakers</a></li>
         <li><a href="../en/city.html">Your trip</a></li>
-        <li><a href="../en/history.html">History</a></li>
+        <li><a href="../en/2024.html">Event 2024</a></li>
+        <li><a href="../en/2023.html">Event 2023</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -99,7 +100,8 @@
         <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/speakers.html">&#x2022; Speakers</a></li>
         <li><a href="../en/city.html">&#x2022; Your trip</a></li>
-        <li><a href="../en/history.html">&#x2022; History</a></li>
+        <li><a href="../en/2024.html">&#x2022; Event 2024</a></li>
+        <li><a href="../en/2023.html">&#x2022; Event 2023</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
@@ -141,22 +143,19 @@
             <br>
 
             <div class="row center">
-                <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
-                <h6 class="header col s12 light"><b>August 6 to 9. Salta, Argentina. Free of charge.</b>
+                <h4 class="header col s12 light">We're back from Bayes Plurinational SALTA 2024!</h4>
+                <!--<h6 class="header col s12 light"><b>August 6 to 9. Salta, Argentina. Free of charge.</b>
                 <br>
                 To organize your trip ( accommodation, food, and more) join the<a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US."> WhatsApp </a>group.
                 </h6>
                 <h6>
                 Open <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>registration</b></a> to attend and present a poster.
-                <!--and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.-->
-                </h6>
+                </h6>-->
 
-                <br>
+           </div>
 
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the community</h5>
+           <div class="row center">
+                <h4 class="header col s12 light">Join the community</h5>
                 <h6>
                 To join the community, please access the following <a href="https://bayesplurinacional.org/link/en/Community.html" target="_blank"> form</a>
                 </h5>
