--- a/es/2023.html
+++ b/es/2023.html
@@ -52,7 +52,8 @@
         <li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/disertantes.html">Disertantes</a></li>
         <li><a href="../es/ciudad.html">Tu viaje</a></li>
-        <li><a href="../es/historia.html">Historia</a></li>
+        <li><a href="../es/2024.html">Evento 2024</a></li>
+        <li><a href="../es/2023.html">Evento 2023</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -99,7 +100,8 @@
             <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/disertantes.html">&#x2022; Disertantes</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Tu viaje</a></li>
-            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
+            <li><a href="../es/2024.html">&#x2022; Evento 2024</a></li>
+            <li><a href="../es/2023.html">&#x2022; Evento 2023</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -172,11 +174,11 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Escuela Bayesiana Plurinacional 2024
+                Congreso Bayesiano Plurinacional 2023
                 <h4>
 
                 <h6 class="header col s12 light">
-                La comunidad Bayes Plurinacional realizó con éxito el Congreso Bayesiano Plurinacional 2023 los días 4, 5 y 6 de agosto en las instalaciones de la Secretaría de Ciencia y Tecnología de la provincia de Santiago del Estero, Argentina. La diversidad disciplinar y de regiones fue extraordinaria. Durante el congreso quedó de manifiesto una imperiosa necesidad de contar con mayor cantidad de instancias de formación teórica y práctica en métodos bayesianos. Por ello, en la actividad de cierre se decidió organizar la Escuela Bayesiana Plurinacional 2024.
+                Para promover el potencial del enfoque bayesiano en la academia, en la industria, en el estado y en las organizaciones sociales de América Latina, un grupo de especialistas de diversas regiones decidimos organizar el primer <b>Congreso Bayesiano Plurinacional</b> el 4, 5 y 6 de Agosto del 2023 en Santiago del Estero, Argentina.
                 </h6>
                     
                 <h6 class="header col s12 light">
@@ -193,7 +195,100 @@
                 Volvimos con la energía renovada. Ya empezamos a armar equipos para organizar las actividades del próximo año. Además de seminarios virtuales, encuentros de trabajo, cursos presenciales, decidimos organizar una Escuela-Congreso Bayesiana Plurinacional 2024. Aquí algunas fotos del Congreso Bayesiano Plurinacional 2023.
                 </h6>
 
+
+                <h6 class="header col s12 light">
+                Para ver la página del año 2023, ir a <a href="http://bayesdelsur.com.ar/2023">bayesdelsur.com.ar/2023</a>.
+                </h6>
+
                 <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <!--<br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
+                </div>
+            </div>-->
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
 
             <div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
