--- a/es/index.html
+++ b/es/index.html
@@ -52,7 +52,8 @@
         <li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/disertantes.html">Disertantes</a></li>
         <li><a href="../es/ciudad.html">Tu viaje</a></li>
-        <li><a href="../es/historia.html">Historia</a></li>
+        <li><a href="../es/2024.html">Evento 2024</a></li>
+        <li><a href="../es/2023.html">Evento 2023</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -99,7 +100,8 @@
             <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/disertantes.html">&#x2022; Disertantes</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Tu viaje</a></li>
-            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
+            <li><a href="../es/2024.html">&#x2022; Evento 2024</a></li>
+            <li><a href="../es/2023.html">&#x2022; Evento 2023</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -182,21 +184,15 @@
 
 
             <div class="row center">
-                <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
-                <h6 class="header col s12 light">
+                <h4 class="header col s12 light">Volvimos de la Bayes Plurinacional SALTA 2024!</h4>
+<!--                <h6 class="header col s12 light">
                 <b>Del 6 al 9 de agosto. Salta, Argentina. Sin costo y con becas.</b>
                 <br>
                 Para organizar tu viaje (hospedaje, alimentación y demás) ingresá al grupo de <a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a>
                 </h6>
                 <h6>
                 Abierta la <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>inscripción</b></a> para asistir y presentar póster.
-                <!--y
-                al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.-->
-                </h6>
-
-
-                <br>
-
+                </h6>-->
 
             </div>
 
