--- a/navega_en.html
+++ b/navega_en.html
@@ -50,7 +50,8 @@
         <li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/speakers.html">Speakers</a></li>
         <li><a href="../en/city.html">Your trip</a></li>
-        <li><a href="../en/history.html">History</a></li>
+        <li><a href="../en/2024.html">Event 2024</a></li>
+        <li><a href="../en/2023.html">Event 2023</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -97,7 +98,8 @@
         <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/speakers.html">&#x2022; Speakers</a></li>
         <li><a href="../en/city.html">&#x2022; Your trip</a></li>
-        <li><a href="../en/history.html">&#x2022; History</a></li>
+        <li><a href="../en/2024.html">&#x2022; Event 2024</a></li>
+        <li><a href="../en/2023.html">&#x2022; Event 2023</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
