--- a/en/2023.html
+++ b/en/2023.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="en">
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -29,7 +29,7 @@
     }
     </style>
 </head>
-    <body>
+<body>
     <ul id="dropdown0" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/index.html">Castellano</a></li>
@@ -42,122 +42,84 @@
     </ul>
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/plural.html">Plural</a></li>
-        <li><a href="../es/organiza.html">Organización</a></li>
-        <li><a href="../es/comunidad.html">Comunidad</a></li>
+        <li><a href="../en/plural.html">Plural</a></li>
+        <li><a href="../en/organize.html">Organizers</a></li>
+        <li><a href="../en/community.html">Community</a></li>
     </ul>
 
     <ul id="dropdown3" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/cronograma.html">Cronograma</a></li>
-        <li><a href="../es/disertantes.html">Disertantes</a></li>
-        <li><a href="../es/ciudad.html">Tu viaje</a></li>
-        <li><a href="../es/historia.html">Historia</a></li>
-        <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
-        <li><a href="../es/charlas.html">Charlas</a></li>
-        <li><a href="../es/poster.html">Posters</a></li>
-        <li><a href="../es/taller.html">Taller</a></li>
-        <li><a href="../es/becas.html">Becas</a></li>-->
+        <li><a href="../en/schedule.html">Schedule</a></li>
+        <li><a href="../en/speakers.html">Speakers</a></li>
+        <li><a href="../en/city.html">Your trip</a></li>
+        <li><a href="../en/2024.html">Event 2024</a></li>
+        <li><a href="../en/2023.html">Event 2023</a></li>
+        <!--<li><a href="../en/schedule.html">Schedule</a></li>
+        <li><a href="../en/talks.html">Talks</a></li>
+        <li><a href="../en/poster_en.html">Posters</a></li>
+        <li><a href="../en/workshop.html">Workshop</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/seminario.html">Seminario</a></li>
-        <!--<li><a href="../es/hackaton.html">Hackatón</a></li>-->
+        <li><a href="../en/seminar.html">Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">Hackathon</a></li>-->
     </ul>
 
     <ul id="dropdown5" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/auspiciantes.html">Auspiciantes</a></li>
-        <li><a href="../es/redes.html">Redes</a></li>
-        <li><a href="../es/conducta.html">Conducta</a></li>
-        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
+        <li><a href="../en/sponsors.html">Sponsors</a></li>
+        <li><a href="../en/network.html">Social</a></li>
+        <li><a href="../en/conduct.html">Conduct</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
-        <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
-        <ul class="right hide-on-med-and-down">
-            <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congreso<i class="material-icons right">arrow_drop_down</i></a></li>
+        <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
+            <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a href="musica.html">Música</a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="../en/music.html">Music</a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
         </ul>
     </nav>
 
     <nav class="blue-grey" role="navigation">
         <ul id="nav-mobile" class="sidenav">
-            <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a></li>
-            <li><a href="../es/index.html">Bayes Plurinacional</a></li>
-            <li><a href="">SOMOS:</a></li>
-            <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <li><a href="organiza.html">&#x2022; Organización</a></li>
-            <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
-            <li><a href="../es/musica.html">&#x2022; Música</a></li>
-            <li><a href="">Congreso:</a></li>
-            <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
-            <li><a href="../es/disertantes.html">&#x2022; Disertantes</a></li>
-            <li><a href="../es/ciudad.html">&#x2022; Tu viaje</a></li>
-            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
-            <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
-            <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
-            <li><a href="../es/poster.html">&#x2022; Posters</a></li>
-            <li><a href="../es/taller.html">&#x2022; Taller</a></li>
-            <li><a href="../es/becas.html">&#x2022; Becas</a></li>-->
-            <li><a href="">VIRTUAL:</a></li>
-            <li><a href="../es/seminario.html">&#x2022; Seminario</a></li>
-            <!--<li><a href="../es/hackaton.html">&#x2022; Hackatón</a></li>-->
-            <li><a href="">CONTACTO:</a></li>
-            <li><a href="../es/auspiciantes.html">&#x2022; Auspiciantes</a></li>
-            <li><a href="../es/redes.html">&#x2022; Redes</a></li>
-            <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
+        <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a>
+        <li><a href="../en/index.html">Plurinational Bayes</a></li>
+        <li><a href="">WE ARE:</a></li>
+        <li><a href="../en/plural.html">&#x2022; Plural</a></li>
+        <li><a href="../en/organize.html">&#x2022; Organizers</a></li>
+        <li><a href="../en/community.html">&#x2022; Community</a></li>
+        <li><a href="../en/music.html">&#x2022; Music</a></li>
+        <li><a href="">Congress:</a></li>
+        <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <li><a href="../en/speakers.html">&#x2022; Speakers</a></li>
+        <li><a href="../en/city.html">&#x2022; Your trip</a></li>
+        <li><a href="../en/2024.html">&#x2022; Event 2024</a></li>
+        <li><a href="../en/2023.html">&#x2022; Event 2023</a></li>
+        <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <li><a href="../en/talks.html">&#x2022; Talks</a></li>
+        <li><a href="../en/poster.html">&#x2022; Posters</a></li>
+        <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>-->
+        <li><a href="">VIRTUAL:</a></li>
+        <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
+        <li><a href="">CONTACT:</a></li>
+        <li><a href="../en/sponsors.html">&#x2022; Sponsors</a></li>
+        <li><a href="../en/network.html">&#x2022; Social</a></li>
+        <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -172,30 +134,28 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Congreso Bayesiano Plurinacional 2023
+                Plurinational Bayesian Congress 2023
                 <h4>
 
                 <h6 class="header col s12 light">
-                Para promover el potencial del enfoque bayesiano en la academia, en la industria, en el estado y en las organizaciones sociales de América Latina, un grupo de especialistas de diversas regiones decidimos organizar el primer <b>Congreso Bayesiano Plurinacional</b> el 4, 5 y 6 de Agosto del 2023 en Santiago del Estero, Argentina.
-                </h6>
-                    
-                <h6 class="header col s12 light">
-                La diversidad disciplinar fue extraordinaria: ecología, medicina, astronomía, geología, psicología, cuántica, economía, ingeniería, filosofía, biología, estadística, computación, antropología, entre otras.
-                La diversidad de regiones también: Chile, Paraguay, Uruguay, Colombia, Honduras, Brasil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), tanto del sector privado, del público y de la academia.
-                </h6>
+                To boost the Bayesian communities in Latin America, a group of specialists from different regions decided to organize the first <b>Plurinational Bayesian Congress</b> on August 4, 5 and 6, 2023 in Santiago del Estero, Argentina.</h6>
 
                 <h6 class="header col s12 light">
-                Compartimos ideas, experiencias y dudas sobre la construcción de conocimiento en ciencias empíricas, usando diferentes dialecto pero con un mismo lenguaje común, el de la aplicación estricta de las reglas de la probabilidad (aka Bayes) o el de los acuerdos intersubjetivos en contextos de incertidumbre.
-                El agradecimiento con el equipo de la Secretaría de Ciencia y Técnica de Santiago del Estero es total, por el profesionalismo integral y humano.
+                The diversity of disciplines was extraordinary: ecology, medicine, astronomy, geology, psychology, quantum physics, economics, engineering, philosophy, biology, statistics, computer science, anthropology, among others.
+                The diversity of regions as well: Chile, Paraguay, Uruguay, Colombia, Honduras, Brazil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), from the private, public and academic sectors.
                 </h6>
 
                 <h6 class="header col s12 light">
-                Volvimos con la energía renovada. Ya empezamos a armar equipos para organizar las actividades del próximo año. Además de seminarios virtuales, encuentros de trabajo, cursos presenciales, decidimos organizar una Escuela-Congreso Bayesiana Plurinacional 2024. Aquí algunas fotos del Congreso Bayesiano Plurinacional 2023.
+                We shared ideas, experiences and doubts about the construction of knowledge in empirical sciences, using different dialects but with the same common language, that of the strict application of the rules of probability (aka Bayes) or that of intersubjective agreements in contexts of uncertainty.
+                Our gratitude to the team of the Secretariat of Science and Technology of Santiago del Estero for the integral and human professionalism.
                 </h6>
 
+                <h6 class="header col s12 light">
+                We returned with renewed energy. We have already started to build teams to organize next year's activities. In addition to webinars, workshops, face-to-face courses, we decided to organize a Plurinational Bayesian School-Congress 2024. Here are some pictures of the Plurinational Bayesian Congress 2023.
+                </h6>
 
                 <h6 class="header col s12 light">
-                Para ver la página del año 2023, ir a <a href="http://bayesdelsur.com.ar/2023">bayesdelsur.com.ar/2023</a>.
+                To view the 2023 page, go to <a href="http://bayesdelsur.com.ar/2023/index_en.html">bayesdelsur.com.ar/2023/</a>.
                 </h6>
 
                 <br>
@@ -294,9 +254,7 @@
                 </div>
             </div>
 
-
-
-                </div>
+            </div>
         </div>
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
