--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -52,7 +52,8 @@
         <li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/disertantes.html">Disertantes</a></li>
         <li><a href="../es/ciudad.html">Tu viaje</a></li>
-        <li><a href="../es/historia.html">Historia</a></li>
+        <li><a href="../es/2024.html">Evento 2024</a></li>
+        <li><a href="../es/2023.html">Evento 2023</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -99,7 +100,8 @@
             <li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/disertantes.html">&#x2022; Disertantes</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Tu viaje</a></li>
-            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
+            <li><a href="../es/2024.html">&#x2022; Evento 2024</a></li>
+            <li><a href="../es/2023.html">&#x2022; Evento 2023</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
