--- a/es/2023.html
+++ b/es/2023.html
@@ -197,7 +197,7 @@
 
 
                 <h6 class="header col s12 light">
-                Para ver la página del año 2023, ir a <a href="https://bayesplurinacional.org/2023/index_en.html">bayesplurinacional.org/2023/</a>.
+                Para ver la página del año 2023, ir a <a href="https://bayesplurinacional.org/2023/index.html">bayesplurinacional.org/2023/</a>.
                 </h6>
 
                 <br>
