--- a/en/2023.html
+++ b/en/2023.html
@@ -155,7 +155,7 @@
                 </h6>
 
                 <h6 class="header col s12 light">
-                To view the 2023 page, go to <a href="https://bayesdelsur.com.ar/2023/index_en.html">bayesdelsur.com.ar/2023/</a>.
+                To view the 2023 page, go to <a href="https://bayesplurinacional.org/2023/index_en.html">bayesplurinacional.org/2023/</a>.
                 </h6>
 
                 <br>
