--- a/es/index.html
+++ b/es/index.html
@@ -184,7 +184,7 @@
 
 
             <div class="row center">
-                <h4 class="header col s12 light">Volvimos de la Bayes Plurinacional SALTA 2024!</h4>
+                <h4 class="header col s12 light">Volvimos de Bayes Plurinacional SALTA 2024!</h4>
 <!--                <h6 class="header col s12 light">
                 <b>Del 6 al 9 de agosto. Salta, Argentina. Sin costo y con becas.</b>
                 <br>
